User Register v0.3 (email and name check)